[project]
name = "langgraph-cot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
